# spectosoft_video_capturing

./: Cargo.toml
src/: activity.rs  avi_writer.rs  lib.rs  main.rs  mp4_writer.rs  recorder.rs  screenshotter.rs  webm_writer.rs
