[package]
name = "recording_project"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
screenshots = "0.8"
rgb = "0.8"
byteorder = "1"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Graphics_Gdi"
] }
cpal = { version = "0.15", optional = true }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
fs_extra = "1.3"
rubato = "0.13"

[features]
default = ['audio_capture']
audio_capture = ["cpal"]
webm = ["dep:rav1e", "dep:webm"]

[dependencies.rav1e]
version = "0.6"
optional = true
default-features = false

[dependencies.webm]
version = "2"
optional = true
